Revert "fix(@clayui/css): Checkbox and radio text should be vertically aligned when breaking to a new line"
This reverts commit 831f560261b2b763aed4944d4b75bf8a70f622c2.

--- a/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
@@ -327,6 +327,7 @@ $cadmin-dropdown-section-custom-control-label: map-deep-merge(
 $cadmin-dropdown-section-custom-control-label-text: () !default;
 $cadmin-dropdown-section-custom-control-label-text: map-deep-merge(
 	(
+		display: block,
 		padding-left: 28px,
 	),
 	$cadmin-dropdown-section-custom-control-label-text
