--- a/packages/clay-css/src/scss/variables/_custom-forms.scss
+++ b/packages/clay-css/src/scss/variables/_custom-forms.scss
@@ -227,11 +227,7 @@ $label-custom-control-label: map-deep-merge(
 $custom-control-label-text: () !default;
 $custom-control-label-text: map-deep-merge(
 	(
-		display: block,
-		padding-left:
-			calc(
-				#{$custom-control-indicator-size} + #{$custom-control-description-padding-left}
-			),
+		padding-left: $custom-control-description-padding-left,
 	),
 	$custom-control-label-text
 );
